# Stake_downloader

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  app.py  build.py  check_live.py  config.py  docker-compose.yml  launcher.py  main.py  pipeline.py  pyproject.toml  requirements.txt  test_api.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml
core/: __init__.py  config.py  logger.py
detectors/: __init__.py  gemini_analyzer.py  virality_scorer.py
docs/: api.md  architecture.md  setup.md
integrations/: __init__.py
monitors/: __init__.py  base_monitor.py  kick_monitor.py  stake_monitor.py
processors/: __init__.py  caption_generator.py  reframe_vertical.py  video_compiler.py
publishers/: __init__.py  instagram_reels.py  tiktok_uploader.py  youtube_shorts.py
recorders/: __init__.py  clip_downloader.py  replay_renderer.py  retroactive_clipper.py  stream_buffer.py
scripts/: debug_downloader.py  test_syntax.py  verify_pipeline.py
security/: __init__.py
tests/: test_api.py  test_config.py  test_downloader_optimization.py  test_monitors.py  test_pipeline.py  test_publishers_mock.py  test_virality_scorer.py
web/: index.html
